<resources>
    <string name="app_name">神州帮帮</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pwd">密码</string>
    <string name="login_reg">注册</string>
    <string name="login_find_pwd">找回密码</string>
    <string name="login_log">登录</string>
    <string name="register">注册</string>
    <string name="reg_phone">手机号</string>
    <string name="find_user">请输入手机号</string>
    <string name="reg_phone_msg">短信验证码</string>
    <string name="reg_verification_code">获取短信验证码</string>
    <string name="reg_verification_code_again">秒后重新获取验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="reg_reCode">重新获取验证码</string>
    <string name="reg_pwd">新密码</string>
    <string name="invalid_code">无效验证码,请输入6位数验证码</string>
    <string name="reg_confirm_pwd">确认密码</string>
    <string name="reg_empty_pwd">密码不能为空</string>
    <string name="reg_pwd_not_match">两次密码输入不匹配</string>
    <string name="reg_i_agree">我已同意并阅读</string>
    <string name="reg_protocol"><u>《神州联保用户协议》</u></string>
    <string name="reg_please_complete_your_info_first">请完善资料,以便我们核实您的信息</string>
    <string name="organizing_upload_avatar">上传头像</string>
    <string name="organizing_real_name">真实姓名</string>
    <string name="organizing_please_input_real_name">请填写真实姓名</string>
    <string name="organizing_please_input_real_address">请填写真实地址</string>
    <string name="organizing__real_address">真实地址</string>
    <string name="organizing_please_input_correct_citizen_ID">请填写真实身份证号码</string>
    <string name="organizing_choose_location">选择地区</string>
    <string name="organizing_please_choose_lat_lng">请选择你所在的经纬度以便我们确认您的真实位置(点击详细地址旁边的坐标图标进行选择)</string>
    <string name="organizing_upload_citizen_picture">上传身份证照片 :</string>
    <string name="organizing_citizen_ID">身份证号码</string>
    <string name="organizing_skill">技能选择</string>
    <string name="organizing_organization">所属机构</string>
    <string name="organizing_choose">选择</string>
    <string name="organizing_please_complete_your_profile_first">请先完善好你的信息并且提交</string>
    <string name="district_location">当前位置</string>
    <string name="district_all_location">全部地区</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="district">区</string>
    <string name="street">街道</string>
    <string name="now_position">所在地址</string>
    <string name="organization_business_license">营业执照注册号</string>
    <string name="organization_name">机构名称</string>
    <string name="organization_license_copy">上传营业执照副本</string>
    <string name="organization_real_pic">机构实拍图片</string>
    <string name="organization_for_review">提交审核</string>
    <string name="organization_input_license">请输入注册号</string>
    <string name="organization_input_name">请输入机构名称</string>
    <string name="organization_input_location">请选择所在地区</string>
    <string name="organization_input_detail_location">请输入详细地址</string>
    <string name="organization_input_contact_phone">请输入联系电话</string>
    <string name="shop_list_add_fitting">＋添加配件</string>
    <string name="shop_car">购物车</string>
    <string name="clear_all">清空全部</string>
    <string name="fitting_ware_horse">配件库</string>
    <string name="all">共</string>
    <string name="num_of_fitting">个配件</string>
    <string name="choose_done">选好了</string>
    <string name="vip_system_msg">系统消息</string>
    <string name="vip_complete_done">完单量</string>
    <string name="vip_complete_detail">完善资料</string>
    <string name="vip_wallet">我的钱包</string>
    <string name="vip_create_maintain">创建维修群</string>
    <string name="vip_join_maintain">加入维修群</string>
    <string name="vip_tell_fri">告诉朋友</string>
    <string name="vip_feedback">意见反馈</string>
    <string name="vip_service_phone">客服电话</string>
    <string name="vip_repairing_price">联保价格</string>
    <string name="vip_read_me">接单必读</string>
    <string name="vip_about">关于</string>
    <string name="new_order_contact_client">预约客户</string>
    <string name="new_order_pass_on">转单</string>
    <string name="pending_operate_order">操作工单</string>
    <string name="order_detail_title">工单详情</string>
    <string name="order_detail_state">工单状态 :</string>
    <string name="order_detail_no">工单编号 :</string>
    <string name="order_detail_take_time">接单时间 :</string>
    <string name="order_detail_way">路线里程 :</string>
    <string name="order_detail_sign_in">预约签到</string>
    <string name="order_detail_already_sign_in">已签到</string>
    <string name="order_detail_edit_appointment">修改预约</string>
    <string name="order_detail_sign_again">再次预约</string>
    <string name="order_detail_ticktock">距预约签到时间还有 :</string>
    <string name="order_detail_contact">联系方式</string>
    <string name="order_detail_fault_description">故障描述 : </string>
    <string name="order_detail_fault_label">故障标签 : </string>
    <string name="order_detail_service_result">本次服务结果</string>
    <string name="order_detail_please_enter_service_result">请选择本次服务结果</string>
    <string name="order_detail_last_service_result">上次服务结果</string>
    <string name="order_detail_upload_pic">上传完工图片</string>
    <string name="order_detail_order_report_description">工单报告描述</string>
    <string name="order_detail_service_option">服务项目</string>
    <string name="order_detail_please_enter_service_option">请选择服务项目</string>
    <string name="order_detail_wrong_cargo">产品不对 ?</string>
    <string name="order_detail_fitting">申请配件</string>
    <string name="order_detail_fitting_sent_back">配件寄回</string>
    <string name="order_detail_fitting_price">申请费用</string>
    <string name="order_detail_update_pic">上传完工照片 :</string>
    <string name="order_detail_service_code">请向客户索取服务评价码</string>
    <string name="order_detail_technology_support_hot_line">技术支持</string>
    <string name="order_detail_service_code_hint">评价码</string>
    <string name="order_detail_confirm_done">确认完成</string>
    <string name="order_detail">本次工单费用明细</string>
    <string name="order_judgement_fault_type">故障类型</string>
    <string name="order_judgement_fault_status">请选择故障情况</string>
    <string name="order_judgement_book_manage">预约管理</string>
    <string name="order_judgement_confirm_order">确认订单</string>
    <string name="order_judgement_service_pay">+服务金额</string>
    <string name="order_judgement_service_code">客户提供的服务码</string>
    <string name="fitting_add">新增厂家配件申请</string>
    <string name="fitting_other">其他配件</string>
    <string name="fitting_shop_car">购物车</string>
    <string name="fitting_post_back_applied_add">新增配件回寄申请</string>
    <string name="fitting_detail_delivery_state">配送状态:</string>
    <string name="fitting_detail_delivery_time">配送时间 :</string>
    <string name="fitting_detail_phone">电话:</string>
    <string name="fitting_detail_confirm">收到，并寄回配件</string>
    <string name="fitting_post_back_no">配送单号:</string>
    <string name="fitting_post_company_info">厂家信息</string>
    <string name="fitting_post_back_order_no">配件寄回单 :</string>
    <string name="fitting_post_msg">邮寄信息</string>
    <string name="fitting_item_count">数量 :</string>
    <string name="fitting_supplier_message">厂家留言 :</string>
    <string name="fitting_supplier_message_info">厂家留言信息</string>
    <string name="fitting_worker_message">技工留言 :</string>
    <string name="fitting_worker_message_info">技工留言信息</string>
    <string name="fitting_leave_supplier_message">给厂家留言 :</string>
    <string name="fitting_lists">配件清单</string>
    <string name="fitting_please_enter_classify">请选择分类</string>
    <string name="fitting_please_enter_product">请选择产品</string>
    <string name="fitting_sent_to_user">配件发到用户处</string>
    <string name="fitting_sent_to_mechanic">配件发到技工处</string>
    <string name="fitting_apply_order_no">配件申请单号: </string>
    <string name="shop_car_confirm_order">确认下单</string>
    <string name="shop_car_msg">给厂家留言 : </string>
    <string name="dialog_content">确定拨打</string>
    <string name="refresh_loading">加载中</string>
    <string name="no_more">没有更多了m_m</string>
    <string name="lending_kind">品牌类别</string>
    <string name="lending_unit">元/台</string>
    <string name="expense_note">如有任何意见，请与客服联系。</string>
    <string name="expense_service_pay">服务工时费</string>
    <string name="expense_other_cost">其它费用</string>
    <string name="cancel_reason">退回工单原因</string>
    <string name="please_input_return_back_reason">请填写退回工单原因</string>
    <string name="alter_new_time">新的预约时间</string>
    <string name="alter_reason">修改原因</string>
    <string name="please_choose_reason">请选择修改原因</string>
    <string name="please_choose_time">请选择预约时间</string>
    <string name="wallet_account_balance">账户余额(元)</string>
    <string name="wallet_translation_details">交易明细</string>
    <string name="wallet_security_deposit">质保金(元)</string>
    <string name="wallet_cumulative_revenue">累计收入(元)</string>
    <string name="wallet_wait_confirm">待确认(元)</string>
    <string name="wallet_withdrawing">提现中(元)</string>
    <string name="wallet_withdrawed">已提现(元)</string>
    <string name="wallet_bank_card">我的银行卡</string>
    <string name="wallet_withdraw">我要提现</string>
    <string name="wallet_balance">余额 :</string>
    <string name="wallet_money">金额 :</string>
    <string name="wallet_sn">单号 :</string>
    <string name="wallet_trade_id">交易ID :</string>
    <string name="please_input_account_attr">请选择开户银行</string>
    <string name="please_input_account_city">请选择开户城市</string>
    <string name="please_input_bank_account">输入银行储蓄卡号</string>
    <string name="please_re_enter_bank_account">重复输入一次卡号</string>
    <string name="account_holder">开户人</string>
    <string name="title_appointment_history">预约历史</string>
    <string name="title_service_item">服务项目</string>
    <string name="title_alter">修改预约</string>
    <string name="title_cancel">取消订单</string>
    <string name="title_lending">联保价格</string>
    <string name="subTitle_lending">分类查询</string>
    <string name="title_dial_dialog">拨打</string>
    <string name="title_client_appointment">预约客户</string>
    <string name="title_skill">技能选择</string>
    <string name="title_district">地区</string>
    <string name="title_organizing">完善资料</string>
    <string name="title_expenses_apply">费用申请</string>
    <string name="title_expenses_apply_detail">费用申请详情</string>
    <string name="title_fitting_order">配件订单</string>
    <string name="title_fitting_apply">配件申请</string>
    <string name="title_other_fitting">其他配件申请</string>
    <string name="title_receiver">收件人</string>
    <string name="fitting_detail">配件申请订单详情</string>
    <string name="title_expenses_detail">费用明细</string>
    <string name="title_wallet">我的钱包</string>
    <string name="title_work_history">历史工单</string>
    <string name="title_detail">详情</string>
    <string name="title_set_withdraw_pwd">设置提现密码</string>
    <string name="title_input_withdraw_pwd">输入提现密码</string>
    <string name="title_transaction_detail">交易明细</string>
    <string name="label_name">名称</string>
    <string name="label_num">数量</string>
    <string name="label_code">编码</string>
    <string name="label_description">描述</string>
    <string name="label_please_input_name">请输入名称</string>
    <string name="label_please_input_code">请填写配件条码</string>
    <string name="label_please_input_description">描述一下</string>
    <string name="label_please_input_num">请选择数量</string>
    <string name="submit">提交</string>
    <string name="appointment_time">预约时间 :</string>
    <string name="contact_phone">联系电话:</string>
    <string name="contact">联系人 :</string>
    <string name="appointment_result">预约结果 :</string>
    <string name="appointment_note">预约备注 :</string>
    <string name="return_order">退回工单</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从相册选择</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="choose_time">选择时间</string>
    <string name="upload_pic">上传图片</string>
    <string name="enter_right_info">输入正确的产品信息</string>
    <string name="enter_right_info_detail">产品名称+型号+数量</string>
    <string name="photo">图片</string>
</resources>