<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical"
                  android:minHeight="190dp"
                  android:orientation="vertical">

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_gravy_selector"
            android:text="@string/take_photo"
            android:textSize="18sp"
            />

        <include layout="@layout/line"/>

        <Button
            android:id="@+id/btn_select_from_album"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_gravy_selector"
            android:text="@string/select_from_album"
            android:textSize="18sp"/>

        <include layout="@layout/line"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_gravy_selector"
            android:text="@string/negative"
            android:textSize="18sp"/>
    </LinearLayout>
</layout>