<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:minHeight="208dp"
        android:orientation="vertical"
        android:padding="@dimen/large_margin_15dp">

        <Button
            android:id="@+id/btn_appointment_alter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_gravy_selector"
            android:text="@string/title_alter"
            android:textSize="18sp"
            />

        <include layout="@layout/line"/>

        <Button
            android:id="@+id/btn_appointment_return"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_gravy_selector"
            android:text="@string/return_order"
            android:textSize="18sp"/>

        <include layout="@layout/line"/>

        <Button
            android:id="@+id/btn_appointment_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_gravy_selector"
            android:text="@string/title_appointment_history"
            android:textSize="18sp"/>

    </LinearLayout>
</layout>