<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlCompat">

    <data class=".FittingAdditionalLayout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_primary">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_bg_gravy"
            android:orientation="vertical"
            tools:context=".ui.activity.orders.operating.FittingAdditionalActivity">

            <include layout="@layout/title_bar" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/large_margin_15dp">


                <LinearLayout
                    android:id="@+id/llyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/flyt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_gravy_selector"
                        android:minHeight="@dimen/minHeight_50dp"
                        android:onClick="onClick"
                        android:paddingEnd="@dimen/large_margin_15dp"
                        android:paddingStart="@dimen/large_margin_15dp">

                        <TextView
                            style="@style/textStyle"
                            android:layout_gravity="center_vertical"
                            android:text="@string/label_name" />

                        <TextView
                            android:id="@+id/tv_name"
                            style="@style/textStyle"
                            android:layout_gravity="center_vertical|end"
                            android:tag="NaN"
                            android:text="@string/label_please_input_name"
                            android:textColor="@color/color_text_gravy" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/minHeight_50dp"
                        android:paddingEnd="@dimen/large_margin_15dp"

                        android:paddingStart="@dimen/large_margin_15dp">

                        <TextView
                            style="@style/textStyle"
                            android:layout_gravity="center_vertical"
                            android:text="@string/label_num" />

                        <com.szbb.pro.widget.CountView
                            android:id="@+id/countView"
                            android:layout_width="110dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center_vertical|end" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/flyt_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_gravy_selector"
                        android:minHeight="@dimen/minHeight_50dp"
                        android:onClick="onClick"
                        android:paddingEnd="@dimen/large_margin_15dp"
                        android:paddingStart="@dimen/large_margin_15dp">

                        <TextView
                            style="@style/textStyle"
                            android:layout_gravity="center_vertical"
                            android:text="@string/label_code" />

                        <TextView
                            android:id="@+id/tv_code"
                            style="@style/textStyle"
                            android:layout_gravity="center_vertical|end"
                            android:tag="NaN"
                            android:text="@string/label_please_input_code"

                            android:textColor="@color/color_text_gravy" />
                    </FrameLayout>

                    <RelativeLayout
                        android:id="@+id/rylt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_gravy_selector"
                        android:minHeight="@dimen/minHeight_50dp"

                        android:onClick="onClick"
                        android:paddingEnd="@dimen/large_margin_15dp"
                        android:paddingStart="@dimen/large_margin_15dp">

                        <TextView
                            android:id="@+id/tv_t1"
                            style="@style/textStyle"
                            android:layout_centerVertical="true"
                            android:text="@string/label_description" />

                        <TextView
                            android:id="@+id/tv_description"
                            style="@style/textStyle"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/middle_margin_10dp"
                            android:layout_toEndOf="@id/tv_t1"
                            android:gravity="end"
                            android:hint="@string/label_please_input_description"
                            android:tag="NaN"
                            android:textColor="@color/color_text_gravy"
                            android:textColorHint="@color/color_text_gravy" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llyt_upload_pic_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llyt"
                    android:layout_marginTop="@dimen/large_margin_15dp"
                    android:background="@color/color_white"
                    android:gravity="center_vertical"
                    android:minHeight="102dp"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/large_margin_15dp"
                    android:paddingStart="@dimen/large_margin_15dp"
                    android:visibility="gone">

                    <TextView
                        style="@style/textStyle"
                        android:text="@string/photo" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/small_margin_5dp"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/llyt_upload_pic"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <include
                                android:id="@+id/font"
                                layout="@layout/item_pics" />

                            <include
                                android:id="@+id/back"
                                layout="@layout/item_pics" />

                            <include
                                android:id="@+id/model"
                                layout="@layout/item_pics" />

                            <include
                                android:id="@+id/add"
                                layout="@layout/item_pics" />
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/buttonStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/large_margin_15dp"
                    android:onClick="onClick"
                    android:text="@string/submit" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</layout>